Alteração da configuração do pom.xml - troca do pacote war para jar e remoção do plugin heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 # Configurações do Banco de Dados #
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/condominio?createDatabaseIfNotExist=true&useSSL=false}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/condominioapp}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.tomcat.max-active=${SPRING_DATASOURCE_MAX_ACTIVE:10}
 spring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_MAX_ACTIVE:10}
 spring.datasource.dbcp2.max-total=${SPRING_DATASOURCE_MAX_ACTIVE:10}
 
+
 # Configurações de E-mail #
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
-spring.mail.username=${MAIL_USERNAME:condominiopalmeirasdois}
-spring.mail.password=${MAIL_PASSWORD:palm2condo}
+spring.mail.username=${MAIL_USERNAME:condominio}
+spring.mail.password=${MAIL_PASSWORD:root}
 spring.mail.port=${MAIL_PORT:587}
 spring.mail.properties.mail.smtp.starttls.enable=${MAIL_TLS:true}
 spring.mail.properties.mail.smtp.auth=${MAIL_AUTH:true}
